Xong phần gửi mail và xác nhận mail

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Email": {
+    "From": "vegakinvietnam@gmail.com",
+    "ApplicationName": "ChatApp",
+    "ConfirmEmailPath": "account/cofirm-email",
+    "ResetPasswordPath": "account/reset-password"
+  },
+  "MailJet": {
+    //"ApiKey": "39c066c3c9024ca1cd20054f5ccd45e6",
+    //"SecretKey": "89e1daf8b5a48faf1a95081bdac9d45f"
+    "ApiKey": "17b8affd5214e648b1f2a57763264f34",
+    "SecretKey": "610c253ff34da15cab5dd86d30266301"
+  }
 }
