--- a/API/API.csproj
+++ b/API/API.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<!--to authenticate user using JWT Bearer-->
+		<PackageReference Include="Mailjet.Api" Version="3.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
 		<!--to be able to derive from IdentityDbContext inside our context.cs-->
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.7" />
