fix return json

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,7 +9,7 @@
   "Email": {
     "From": "vegakinvietnam@gmail.com",
     "ApplicationName": "ChatApp",
-    "ConfirmEmailPath": "account/cofirm-email",
+    "ConfirmEmailPath": "account/confirm-email",
     "ResetPasswordPath": "account/reset-password"
   },
   "MailJet": {
