Add Photo, Set Main Photo

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -17,5 +17,10 @@
     //"SecretKey": "89e1daf8b5a48faf1a95081bdac9d45f"
     "ApiKey": "17b8affd5214e648b1f2a57763264f34",
     "SecretKey": "610c253ff34da15cab5dd86d30266301"
+  },
+  "CloudinarySettings": {
+    "CloudName": "ddp72k7ps",
+    "ApiKey": "345256146214767",
+    "ApiSecret": "dUOhBa3dlz6ftsn6kXDPswOwWNk"
   }
 }
